MNT: Re-rendered with conda-build 3.18.9, conda-smithy 3.7.3, and conda-forge-pinning 2020.06.12.14.12.47

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,8 +10,8 @@ source:
   git_tag: 8b3306f34fb9d1b248ac13bbc935180528270e65  # no tags in repo
 
 build:
-  number: 0
-  skip: True  # [win]
+  number: 1
+  # skip: True  # [win]
 
 requirements:
   build:
