--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,6 +22,11 @@ requirements:
   run:
     - hdf5 =1.10.4
 
+test:
+  commands:
+    - test ! -z $HDF5_PLUGIN_PATH  # [not win]
+    - test $HDF5_PLUGIN_PATH == ${CONDA_PREFIX}/usr/local/hdf5/lib/plugin  # [not win]
+
 about:
   home: https://github.com/dectris/HDF5Plugin
   license: BSD-2
