--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -26,9 +26,9 @@ test:
   requires:
     - python
   commands:
-    - python -c 'import os; assert "HDF5_PLUGIN_PATH" in os.environ'
-    - python -c 'import os; assert os.path.isdir(os.environ["HDF5_PLUGIN_PATH"])'
-    - python -c 'import os; assert os.environ["HDF5_PLUGIN_PATH"] == os.environ["CONDA_PREFIX"] + "/usr/local/hdf5/lib/plugin"'
+    - python -c "import os; assert 'HDF5_PLUGIN_PATH' in os.environ"
+    - python -c "import os; assert os.path.isdir(os.environ['HDF5_PLUGIN_PATH'])"
+    - python -c "import os; assert os.environ['HDF5_PLUGIN_PATH'] == os.environ['CONDA_PREFIX'] + '/usr/local/hdf5/lib/plugin'"
 
 about:
   home: https://github.com/dectris/HDF5Plugin
